# runctl

./: .cursorrules  .env.example  .gitignore  LICENSE  Makefile  README.md  clean_heart_rate.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: blessed-tui-guidelines.mdc  cursor-rules-location.mdc  git-conventional-commits.mdc  project-documentation.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  task.md
data/sample_csv/: sample.csv
data/sample_fit/: sample.fit
data/samples/: real_workout_test.csv
devin.cursorrules/: .cursorrules
docs/: alerts.md  api_documentation.md  architecture.md  contributing.md  development.md  development_plan.md  garmin_connect_integration.md  overview.md  project_structure.md  requirements.md  runctl_development_plan.md  scratchpad.md
docs/adr/: 0000-record-architecture-decisions.md  0001-csv-parser-implementation.md  0001-runctl-implementation.md  0001-use-pydantic-v2-for-data-validation.md  0002-project-setup-completion.md  0002-use-localstack-for-aws-emulation.md  0003-data-enrichment-strategy.md  0003-tui-implementation.md  0004-csv-data-processing.md  0004-garmin-connect-integration-strategy.md  0004-pace-analysis-implementation.md  0005-form-metrics-implementation.md  0005-monitoring-and-alerting-strategy.md  0006-data-import-ui.md  0007-scrolling-behavior.md  0008-data-import-screen-improvements.md  README.md
docs/troubleshooting/: garmin_connect.md
project_management/: prd.txt
project_management/meeting_notes/: meeting_notes_20250412.md
project_management/tasks/: TASK-001-heart-rate-cleaner.md
runctl/: __main__.py
runctl/data/: csv_parser.py  form_analysis.py  models.py  pace_analysis.py  power_zones.py  stats.py  validation.py
runctl/tui/: __init__.py  app.py  layout.py  navigation.py
runctl/tui/components/: base.py
runctl/tui/screens/: data_import.py  session_preview.py
src/: cli.py
src/clients/: __init__.py  garmin.py
src/infra/localstack/: config.py  test_setup.py
src/infra/localstack/init/: 01_init_resources.py
src/infra/monitoring/: __init__.py  api.py  config.py  health.py  metrics.py
src/infra/monitoring/grafana/: alert_rules.json  api_performance.json  cache_performance.json  notification_channels.json  system_health.json
src/infra/monitoring/tests/: __init__.py  test_alerts.py
src/models/: analytics.py  training_zones.py  workout.py
src/models/garmin/: __init__.py  body_battery.py  sleep.py  stress.py
src/processors/: __init__.py  intensity_processor.py  pipeline.py  zone_processor.py
src/services/: base.py  body_battery.py  sleep.py  stress.py  stryd.py
src/services/garmin/: __init__.py  cache.py  cache_metrics.py  client.py  config.py  garth_client.py  interface.py  metrics_decorator.py  models.py  rate_limit.py  retry.py
src/utils/: exceptions.py
tests/: __init__.py  conftest.py  test_clean_heart_rate.py
tests/clients/: test_garmin.py
tests/data/: sample_workout.csv  test_csv_parser.py  test_form_analysis.py  test_pace_analysis.py  test_power_zones.py  test_stats.py
tests/integration/: test_cli_integration.py  test_localstack_integration.py  test_processor_pipeline.py  test_stryd_integration.py
tests/integration/garmin/: __init__.py  test_garmin_integration.py
tests/models/garmin/: test_body_battery.py  test_sleep.py  test_stress.py
tests/services/: test_body_battery.py  test_sleep.py  test_stress.py
tests/services/garmin/: test_cache.py  test_garth_client.py  test_rate_limit.py  test_retry.py  test_sleep_recovery.py
tests/tui/: __init__.py  test_app.py  test_data_import.py  test_layout.py  test_navigation.py  test_session_preview.py
tests/unit/: test_analytics.py  test_cli.py  test_intensity_processor.py  test_localstack.py  test_pipeline.py  test_processors.py  test_stryd.py  test_training_zones.py  test_workout.py  test_zone_processor.py
tests/unit/services/garmin/: __init__.py  test_client.py  test_config.py
