[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "runctl"
version = "0.1.0"
description = "Running training control and analytics"
requires-python = ">=3.10"
authors = [
    { name = "Devin Carrick", email = "devin.carrick@gmail.com" }
]
dependencies = [
    "typer>=0.9.0",
    "pandas>=2.2.3",
    "boto3>=1.34.0",
    "pydantic>=2.6.0",
    "loguru>=0.7.2",
]

[project.scripts]
runctl = "src.cli:app"

# Add this section to specify package location
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "TCH", # type-checking
]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]
pythonpath = [".", "src"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
