[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runctl"
version = "0.1.0"
description = "A TUI application for analyzing running metrics and managing training data"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Devin Carrick", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "blessed>=1.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "garth>=0.4.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]

[project.scripts]
runctl = "runctl.cli.commands:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.pytest.ini_options]
addopts = "--cov=runctl --cov-report=term-missing"
testpaths = ["tests"] 